relax Autoconf requirement
I changed my mind about requiring a very recent Autoconf, as this will
inconvenience the poke people and many others not having very recent tools
installed.
I am relaxing the prerequisite, keeping the alternative commented out and
ready to re-enable later.

* bootstrap.conf (autoconf): No longer require very recent version.

* autoconf/jitter.m4 (JITTER_CHECK_AUTOCONF_VERSION): No longer require very
recent version.  Update comment.
(JITTER_PROG_CC_AND_CHECK_C_DIALECT): Update user message, warning that the
diagnosis will be unreliable with older Autoconf versions.  It is just a
warning anyway.

* configure.ac (AC_PROG_LEX): Revert to the backwards-compatible usage, without
any argument.  Keep the modern version in a comment, with explanation.

* example-build-systems/structured-simple/configure.ac (AC_PROG_LEX): Likewise.
* example-build-systems/structured-with-library/configure.ac (AC_PROG_LEX):
Likewise.

--- a/example-build-systems/structured-simple/configure.ac
+++ b/example-build-systems/structured-simple/configure.ac
@@ -72,7 +72,10 @@ JITTER_JITTER_SUBPACKAGE([jitter])
 ################################################################
 
 # Check for flex.
-AC_PROG_LEX([noyywrap])
+# FIXME: when I require a more recent version of Autoconf (see
+# JITTER_CHECK_AUTOCONF_VERSION in jitter.m4) switch to
+# AC_PROG_LEX([noyywrap])
+AC_PROG_LEX()
 if test "x$LEX" != "xflex"; then
   if test -e "$srcdir/structured-scanner.c"; then
     AC_MSG_WARN([you will need flex (instead of $LEX) if you modify the
