build system: Autoconf macro factoring and improvements, Texinfo improvements
Factor internal macros.  Make a better effort to find the C dialect supported by
the compiler, conditionalising definitions according to the Autoconf versions.
Avoid Autoconf-time warnings.  Add convenience macros JITTER_PROG_FLEX and
JITTER_PROG_BISON, also available to user code.

* autoconf/jitter.m4 (JITTER_CHECK_AUTOCONF_VERSION): Change comment,
specification and implementation.
(jitter_autoconf_version, jitter_ac_prog_cc_can_check_c_dialect)
(jitter_ac_prog_lex_with_arguments): New m4 macros defined by
JITTER_CHECK_AUTOCONF_VERSION.
(JITTER_PROG_CC_AND_CHECK_C_DIALECT): Factor and redefine using...
(JITTER_PROG_CC_AND_CHECK_C_DIALECT_OLD_STYLE): ...New macro.
(JITTER_PROG_CC_AND_CHECK_C_DIALECT_NEW_STYLE): ...New macro, with code factored
from the previous definition of JITTER_PROG_CC_AND_CHECK_C_DIALECT.
Add comments.
(JITTER_PROG_FLEX_COMMON, JITTER_PROG_FLEX_OLD_STYLE)
(JITTER_PROG_FLEX_NEW_STYLE): New macros.
(JITTER_JITTER_SUBPACKAGE): Fix the call to JITTER_CONFIG_SUBDIRS_NOW, restoring
an m4 arguments in the place of a shell variable expansion: this fixes an
annoying Autoconf-time warning which was also affecting poke.
(JITTER_PROG_FLEX, JITTER_PROG_BISON): New macros.

* configure.ac (AC_PROG_LEX): Replace with JITTER_PROG_FLEX, adapt test.
(AC_PROG_YACC): Replace with JITTER_PROG_BISON, adapt test, fix comments.
(JITTER_MAKEINFO): Check that makeinfo is recent enough by compiling a minimal
Texinfo file.

* example-build-systems/structured-simple/configure.ac (AC_PROG_LEX)
(AC_PROG_YACC): Likewise.
* example-build-systems/structured-with-library/configure.ac: (AC_PROG_LEX)
(AC_PROG_YACC): Likewise.

* Makefile.am (MAKEINFO, TEXI2DVI): Define using substitutions found at
configure time, which were previously ignored.
(HELP2MAN_WITH_OPTIONS): Change or add help2man options.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1973,6 +1973,9 @@ EXTRA_DIST += \
 # Texinfo documentation.
 # ################################################################
 
+MAKEINFO = $(JITTER_MAKEINFO)
+TEXI2DVI = $(JITTER_TEXI2DVI)
+
 TEXIINFO_OPTIONS = -I $(abs_top_builddir)/doc
 AM_MAKEINFOHTMLFLAGS = $(AM_MAKEINFOFLAGS) --number-sections --fill-column=100
 
@@ -2058,7 +2061,11 @@ web-manuals:
 # does not play well with help2man .
 HELP2MAN_WITH_OPTIONS = \
   ARGP_HELP_FMT='header-col=0'; export ARGP_HELP_FMT; \
-    $(HELP2MAN) --info-page='jitter' --source='Luca Saiu' --section=1
+    $(HELP2MAN) \
+      --info-page='jitter' \
+      --section=1 \
+      --source='Luca Saiu - GNU Project' \
+      --name='@JITTER_PACKAGE_NAME@' --manual='Programming'
 
 # If we have no help2man or we are cross-compiling without an emulator, then we
 # cannot actually rebuild man pages; in this case we will make copies from a
